--- a/src/guitest/AddMedication.form
+++ b/src/guitest/AddMedication.form
@@ -63,7 +63,7 @@
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
-                              <Component id="barcode" alignment="0" max="32767" attributes="0"/>
+                              <Component id="manuName" alignment="0" max="32767" attributes="0"/>
                               <Component id="medName" alignment="0" pref="420" max="32767" attributes="0"/>
                               <Component id="count" alignment="0" min="-2" pref="100" max="-2" attributes="0"/>
                           </Group>
@@ -84,7 +84,7 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="barcode" min="-2" pref="38" max="-2" attributes="0"/>
+              <Component id="manuName" min="-2" pref="38" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Component id="jLabel2" min="-2" pref="19" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -149,7 +149,7 @@
         <Property name="text" type="java.lang.String" value="Manufacturer"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="barcode">
+    <Component class="javax.swing.JTextField" name="manuName">
       <Properties>
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="99" green="99" red="99" type="rgb"/>
