--- a/src/guitest/MainMenu.form
+++ b/src/guitest/MainMenu.form
@@ -234,9 +234,9 @@
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="3" rowCount="0">
-                    <Column editable="true" title="Med Name" type="java.lang.Object"/>
+                    <Column editable="false" title="Med Name" type="java.lang.Object"/>
                     <Column editable="true" title="Comp Name" type="java.lang.Object"/>
-                    <Column editable="true" title="Quant" type="java.lang.Object"/>
+                    <Column editable="false" title="Quant" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -258,6 +258,7 @@
                     </Column>
                   </TableColumnModel>
                 </Property>
+                <Property name="editingColumn" type="int" value="0"/>
                 <Property name="tableHeader" type="javax.swing.table.JTableHeader" editor="org.netbeans.modules.form.editors2.JTableHeaderEditor">
                   <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                 </Property>
