--- a/src/guitest/MainMenu.form
+++ b/src/guitest/MainMenu.form
@@ -235,7 +235,7 @@
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="3" rowCount="0">
                     <Column editable="false" title="Med Name" type="java.lang.Object"/>
-                    <Column editable="true" title="Comp Name" type="java.lang.Object"/>
+                    <Column editable="false" title="Comp Name" type="java.lang.Object"/>
                     <Column editable="false" title="Quant" type="java.lang.Object"/>
                   </Table>
                 </Property>
